--- a/vdc/core/templates/base.html
+++ b/vdc/core/templates/base.html
@@ -1,12 +1,19 @@
 {% load cms_tags sekizai_tags %}
-<html>
-  <head>
-      {% render_block "css" %}
-  </head>
-  <body>
-      {% cms_toolbar %}
-      {% placeholder base_content %}
-      {% block base_content %}{% endblock %}
-      {% render_block "js" %}
-  </body>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Vivendo de Código</title>
+  {% render_block "css" %}
+</head>
+<body>
+  {% cms_toolbar %}
+
+ {# {% placeholder base_content %} #}
+
+  {% block base_content %}{% endblock %}
+
+  <script src="{{ STATIC_URL }}js/lib/jquery-1.10.2.min.js"></script>
+  {% render_block "js" %}
+</body>
 </html>
