--- a/vdc/core/templates/base.html
+++ b/vdc/core/templates/base.html
@@ -4,16 +4,25 @@
 <head>
   <meta charset="UTF-8">
   <title>Vivendo de Código</title>
+
+  <meta name="robots" content="all" />
+  <meta name="description" content="" />
+  <meta name="keywords" content="Developers, Desenvolvimento, programação, programadores, dojo, emprego" />
+  <meta name="author" content="Fernando A. Valente" />
+
+  <link href="{{ STATIC_URL }}js/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
   {% render_block "css" %}
+
 </head>
 <body>
   {% cms_toolbar %}
 
- {# {% placeholder base_content %} #}
+  {# {% placeholder base_content %} #}
 
   {% block base_content %}{% endblock %}
 
   <script src="{{ STATIC_URL }}js/lib/jquery-1.10.2.min.js"></script>
+  <script src="{{ STATIC_URL }}js/lib/bootstrap/js/bootstrap.min.js"></script>
   {% render_block "js" %}
 </body>
 </html>
