--- a/vdc/core/templates/home.html
+++ b/vdc/core/templates/home.html
@@ -3,8 +3,18 @@
 
 {% block base_content %}
     {% addtoblock "css" %}
+        <link href='http://fonts.googleapis.com/css?family=Seymour+One' rel='stylesheet' type='text/css'>
         <link href="{{ STATIC_URL }}css/home.css" rel="stylesheet" type="text/css" />
     {% endaddtoblock %}
+
+    <div id="home-logo">
+        <div id="logo-left">
+            <img src="{{ STATIC_URL }}imgs/home.png">
+        </div>
+        <div id="logo-right">
+            <h1>Vivendo de código</h1>
+        </div>
+    </div>
 
     <nav id="nav-orientation">
         <div class="span4"></div>
