--- a/vdc/core/templates/home.html
+++ b/vdc/core/templates/home.html
@@ -17,9 +17,9 @@
     </div>
 
     <nav id="nav-orientation">
-        <div class="span4"></div>
-        <div class="span4"></div>
-        <div class="span4"></div>
+        <div class="span4 border-jobs"></div>
+        <div class="span4 border-events"></div>
+        <div class="span4 border-other"></div>
     </nav>
 
     {% addtoblock "js" %}{% endaddtoblock %}
