Update home and create new vdc logo

--- a/vdc/core/templates/home.html
+++ b/vdc/core/templates/home.html
@@ -9,10 +9,12 @@
 
     <div id="home-logo">
         <div id="logo-left">
-            <img src="{{ STATIC_URL }}imgs/home.png">
+            <img src="{{ STATIC_URL }}/imgs/vdc_logo.png" alt="vivendo de código">
         </div>
-        <div id="logo-right">
-            <h1>Vivendo de código</h1>
+        <div id="nav">
+            <nav>
+
+            </nav>
         </div>
     </div>
 
