base css and home update. Add new logo

--- a/vdc/core/templates/base.html
+++ b/vdc/core/templates/base.html
@@ -18,6 +18,16 @@
 <body>
   {% cms_toolbar %}
   {# {% placeholder base_content %} #}
+  <header id="base-top">
+    <div id="logo">
+        <div id="logo-left">
+            <img src="{{ STATIC_URL }}/imgs/vdc_logo.png" alt="vivendo de código">
+        </div>
+        <nav id="nav">
+            aaaaa
+        </nav>
+    </div>
+  </header>
 
   {% block base_content %}{% endblock %}
 
