--- a/vdc/core/static/css/base.css
+++ b/vdc/core/static/css/base.css
@@ -1,3 +1,6 @@
+/*
+* default configurations
+****************************************************************************/
 html, body {
     margin: 0;
     padding: 0;
@@ -8,4 +11,82 @@ html, body {
     font-size: 100%;
     -webkit-text-size-adjust: 100%;
     display: block;
+    background: url("../imgs/bg.png");
+}
+
+/*
+* top
+****************************************************************************/
+#base-top {
+    width: 100%;
+    height: 150px;
+}
+
+#logo {
+    text-align: center;
+    margin: 0 auto 0 auto;
+    padding-top: 20px;
+    padding-bottom: 40px;
+    width: 950px;
+}
+
+#logo-left {
+    float: left;
+}
+
+#logo-right {
+    float: right;
+    padding-top: 15px;
+}
+
+/*
+* navigation
+****************************************************************************/
+
+#navigation {
+    border-top: 1px solid #fff;
+    border-bottom: 1px solid #ccc;
+    overflow: hidden;
+    padding: 13px 8px;
+    -webkit-box-shadow: 0 3px 5px #ddd;
+    -moz-box-shadow: 0 3px 5px #ddd;
+    box-shadow: 0 3px 5px #ddd;
+}
+
+#navigation ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+#navigation ul li {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+#navigation ul > li {
+    float: left;
+    margin-right: 7px;
+}
+
+#navigation ul > li > a {
+    font-family: 'Ubuntu', sans-serif;
+    padding: 6px 12px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    font-size: 15px;
+    color: #444;
+    text-shadow: 1px 1px 1px #ddd;
+}
+
+#navigation ul > li > a:hover {
+    text-decoration: none;
+    background-color: #ccc;
+    color: #555;
+    text-shadow: 1px 1px 1px #eee;
+    -webkit-box-shadow: 1px 1px 8px #999 inset;
+    -moz-box-shadow: 1px 1px 8px #999 inset;
+    box-shadow: 1px 1px 8px #999 inset;
 }
