--- a/vdc/core/static/css/base.css
+++ b/vdc/core/static/css/base.css
@@ -14,12 +14,16 @@ html, body {
     background: url("../imgs/bg.png");
 }
 
+.hidden-element {
+    display: none;
+}
+
 /*
 * top
 ****************************************************************************/
 #base-top {
     width: 100%;
-    height: 150px;
+    height: 100px;
 }
 
 #logo {
@@ -32,6 +36,7 @@ html, body {
 
 #logo-left {
     float: left;
+    margin-right: 60px;
 }
 
 #logo-right {
@@ -42,27 +47,8 @@ html, body {
 /*
 * navigation
 ****************************************************************************/
-
 #navigation {
-    border-top: 1px solid #fff;
-    border-bottom: 1px solid #ccc;
-    overflow: hidden;
-    padding: 13px 8px;
-    -webkit-box-shadow: 0 3px 5px #ddd;
-    -moz-box-shadow: 0 3px 5px #ddd;
-    box-shadow: 0 3px 5px #ddd;
-}
-
-#navigation ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-#navigation ul li {
-    list-style: none;
-    padding: 0;
-    margin: 0;
+    padding-top: 50px;
 }
 
 #navigation ul > li {
@@ -71,20 +57,20 @@ html, body {
 }
 
 #navigation ul > li > a {
-    font-family: 'Ubuntu', sans-serif;
-    padding: 6px 12px;
+    padding: 6px 4px;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
-    font-size: 15px;
-    color: #444;
+    font-size: 16px;
+    color: #666;
+    font-family: 'Audiowide', cursive;
     text-shadow: 1px 1px 1px #ddd;
 }
 
-#navigation ul > li > a:hover {
+#navigation ul > li > a:hover, .item-nav-selected {
     text-decoration: none;
-    background-color: #ccc;
-    color: #555;
+    background-color: #f0f0f0;
+    color: #666;
     text-shadow: 1px 1px 1px #eee;
     -webkit-box-shadow: 1px 1px 8px #999 inset;
     -moz-box-shadow: 1px 1px 8px #999 inset;
