--- a/vdc/core/static/css/home.css
+++ b/vdc/core/static/css/home.css
@@ -1,3 +1,7 @@
+/*
+* default configurations
+****************************************************************************/
+
 h1 {
     color: #666;
     font-size: 50px;
@@ -5,18 +9,45 @@ h1 {
     text-shadow: 2px 2px 2px #ccc;
 }
 
+a {
+    text-decoration: none;
+    margin: 0;
+    padding: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+    background: transparent;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+ul li {
+    list-style: none;
+    padding: 20px;
+    margin: 0;
+    display: inline;
+}
+
+/*
+* body
+****************************************************************************/
 #nav-orientation {
     clear: both;
-    margin: 80px auto 0 auto;
+    margin: 110px auto 0 auto;
     width: 980px;
     min-height: 430px;
 }
 
-#nav-orientation .span4 {
+#nav-orientation .col-lg-3 {
     border: 1px solid #ccc;
     background-color: #f0f0f0;
     opacity: .34;
-    min-height: 400px;
+    min-height: 300px;
+    margin-right: 26px;
+    margin-left: 30px;
 
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
@@ -44,3 +75,13 @@ h1 {
     cursor: pointer;
     border: 1px solid #46a4e3;
 }
+
+/*
+* footer
+****************************************************************************/
+#home-foot {
+    width: 100%;
+    height: 100px;
+    /*background-color: #000;*/
+}
+
