--- a/vdc/core/templates/home.html
+++ b/vdc/core/templates/home.html
@@ -9,45 +9,52 @@
     {% endaddtoblock %}
 
     <nav id="nav-orientation">
-            <div class="col-lg-3 border-jobs">
-                <section id="front-end">
-                    <header class="img-detail-50">
-                        <img src="{{ STATIC_URL }}/imgs/design-bump.png" >
-                    </header>
-                    <article class="wk-detail">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Praesent et tincidunt libero, in blandit elit. Nulla ac posuere ligula.
-                        Praesent sagittis pellentesque magna nec aliquam.
-                    </article>
-                </section>
-            </div>
-            <div class="col-lg-3 border-events">
-                <section id="back-end">
-                    <header class="img-detail-70">
-                        <img src="{{ STATIC_URL }}/imgs/architect.png" >
-                    </header>
-                    <article class="wk-detail">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Praesent et tincidunt libero, in blandit elit. Nulla ac posuere ligula.
-                        Praesent sagittis pellentesque magna nec aliquam.
-                    </article>
-                </section>
-            </div>
-            <div class="col-lg-3 border-other">
-                <section id="social">
-                    <header class="img-detail-70">
-                        <img src="{{ STATIC_URL }}/imgs/people-y.png" >
-                    </header>
-                    <article class="wk-detail">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Praesent et tincidunt libero, in blandit elit. Nulla ac posuere ligula.
-                        Praesent sagittis pellentesque magna nec aliquam.
-                    </article>
-                </section>
-            </div>
-        </nav>
+        <div class="col-lg-3 border-jobs">
+            <section id="front-end">
+                <header class="img-detail-50">
+                    <img src="{{ STATIC_URL }}/imgs/design-bump.png" >
+                </header>
+                <article class="wk-detail">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Praesent et tincidunt libero, in blandit elit. Nulla ac posuere ligula.
+                    Praesent sagittis pellentesque magna nec aliquam.
+                </article>
+            </section>
+        </div>
+        <div class="col-lg-3 border-events">
+            <section id="back-end">
+                <header class="img-detail-70">
+                    <img src="{{ STATIC_URL }}/imgs/architect.png" >
+                </header>
+                <article class="wk-detail">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Praesent et tincidunt libero, in blandit elit. Nulla ac posuere ligula.
+                    Praesent sagittis pellentesque magna nec aliquam.
+                </article>
+            </section>
+        </div>
+        <div class="col-lg-3 border-other">
+            <section id="social">
+                <header class="img-detail-70">
+                    <img src="{{ STATIC_URL }}/imgs/people-y.png" >
+                </header>
+                <article class="wk-detail">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Praesent et tincidunt libero, in blandit elit. Nulla ac posuere ligula.
+                    Praesent sagittis pellentesque magna nec aliquam.
+                </article>
+            </section>
+        </div>
+    </nav>
 
+    <section id="content-details">
+        <header>
 
+        </header>
+        <article>
+
+        </article>
+    </section>
 
     <footer id="home-foot"></footer>
 
