Update css and html of home

--- a/vdc/core/templates/home.html
+++ b/vdc/core/templates/home.html
@@ -47,16 +47,9 @@
         </div>
     </nav>
 
-    <section id="content-details">
-        <header>
-
-        </header>
-        <article>
-
-        </article>
-    </section>
-
-    <footer id="home-foot"></footer>
+    <footer id="home-foot">
+        <div class="navbar navbar-fixed-bottom"></div>
+    </footer>
 
     {% addtoblock "js" %}{% endaddtoblock %}
 {% endblock %}
