--- a/vdc/core/templates/base.html
+++ b/vdc/core/templates/base.html
@@ -1,4 +1,3 @@
-{% load cms_tags sekizai_tags %}
 <!doctype html>
 <html lang="en">
 <head>
@@ -12,12 +11,10 @@
 
   <link href="{{ STATIC_URL }}js/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
   <link href="{{ STATIC_URL }}css/base.css" rel="stylesheet" type="text/css" />
-  {% render_block "css" %}
+  {% block css %}{% endblock %}
 
 </head>
 <body>
-  {% cms_toolbar %}
-  {# {% placeholder base_content %} #}
   <header id="base-top">
     <div id="logo">
         <div id="logo-left">
@@ -34,10 +31,10 @@
     </div>
   </header>
 
-    {% block base_content %}{% endblock %}
+   {% block base_content %}{% endblock %}
 
   <script src="{{ STATIC_URL }}js/lib/jquery-1.10.2.min.js"></script>
   <script src="{{ STATIC_URL }}js/lib/bootstrap/js/bootstrap.min.js"></script>
-  {% render_block "js" %}
+  {% block js %}{% endblock %}
 </body>
 </html>
